llvm/test/Assembler/datalayout-invalid-address-space-value2.ll
; RUN: not llvm-as %s 2>&1 | FileCheck %s

; CHECK: error: Trailing separator in datalayout string

target datalayout = "z:"